--- a/static/errorPage.html
+++ b/static/errorPage.html
@@ -12,7 +12,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: rgb(238, 152, 197);
+            background-color: lightgray;
         }
         div {
             text-align:    center;
@@ -22,7 +22,8 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: rgb(0, 0, 0);
+            color: red;
+            
         }
         p {
             text-align: center;
